Bug 433673 - Umlauts are not recognized in Spellcheck
Summary: Umlauts are not recognized in Spellcheck
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 434096 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-26 18:51 UTC by Dmitri Koulikoff
Modified: 2021-03-07 11:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.81.0
Sentry Crash Report:


Attachments
wrong (2.07 KB, image/png)
2021-02-26 18:51 UTC, Dmitri Koulikoff
Details
correct (1.17 KB, image/png)
2021-02-26 18:53 UTC, Dmitri Koulikoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitri Koulikoff 2021-02-26 18:51:33 UTC
Created attachment 136204 [details]
wrong

SUMMARY

Umlauts are not recognized in Spellcheck


STEPS TO REPRODUCE
1. In a new document enable "Automatic spell checking"
2. Change Dictionary to Deutsch (Deutschland)
3. Type the word "gelösst"

OBSERVED RESULT

You will see that only the the last 3 letters are underscored with the red waiving line and right-click on them and then selecting "Spelling" from the pup-up menu does not offer the correct word "gelöst".

EXPECTED RESULT

The whole word "gelösst" must be underscored and the pup-up menu in "Spelling" must offer the option "gelöst".


SOFTWARE/OS VERSIONS
Operating System: Slackware-current
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.18
OS Type: 64-bit
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Comment 1 Dmitri Koulikoff 2021-02-26 18:53:55 UTC
Created attachment 136205 [details]
correct
Comment 2 Dmitri Koulikoff 2021-02-26 18:56:36 UTC
I forget to mark this bug as critical.
Comment 3 Christoph Cullmann 2021-03-06 21:52:26 UTC
Git commit 31085fdea3ed628ae4c122badc6895d8a79d6a1d by Christoph Cullmann.
Committed on 06/03/2021 at 21:52.
Pushed by cullmann into branch 'master'.

fix spellcheck word detection for non-ASCII

fix porting mistake for spellcheck word boundary
detection regex stuff

we need there unicode support

frameworks/ktexteditor#10

M  +4    -4    src/spellcheck/ontheflycheck.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/31085fdea3ed628ae4c122badc6895d8a79d6a1d
Comment 4 Christoph Cullmann 2021-03-06 21:53:30 UTC
Yeah, seems we have there some generic porting issue.

I opened an internal development ticket to fixup that (in a broader scope).

https://invent.kde.org/frameworks/ktexteditor/-/issues/10
Comment 5 Kåre Särs 2021-03-07 11:10:22 UTC
Git commit 675eaa6eebdbdf5437b7d150ae907283cb6ccb81 by Kåre Särs.
Committed on 07/03/2021 at 09:38.
Pushed by cullmann into branch 'master'.

S&R: Add UseUnicodePropertiesOption to regexps

To make regular expressions work properly with Unicode add
UseUnicodePropertiesOption option

(Search & Replace plugin)
Related: bug 433924

M  +4    -2    addons/search/plugin_search.cpp

https://invent.kde.org/utilities/kate/commit/675eaa6eebdbdf5437b7d150ae907283cb6ccb81
Comment 6 Christoph Cullmann 2021-03-07 11:36:00 UTC
*** Bug 434096 has been marked as a duplicate of this bug. ***