fix spellcheck word detection for non-ASCII

fix porting mistake for spellcheck word boundary
detection regex stuff

we need there unicode support

BUG: 433673

frameworks/ktexteditor#10